--- a/corona_web_app/templates/vital_log_HTML/vital_log.html
+++ b/corona_web_app/templates/vital_log_HTML/vital_log.html
@@ -7,6 +7,9 @@
     {% bootstrap_javascript %}
     <meta charset="utf-8" />
     <title>過去の健康記録</title>
+    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
 </head>
 
 <body>
