--- a/corona_web_app/templates/accounts_HTML/login_home.html
+++ b/corona_web_app/templates/accounts_HTML/login_home.html
@@ -19,13 +19,13 @@
     <h1><font color="blue">{{ UserID }}</font> さん, ようこそ
   </div>
   <div class="py-3">
-    <button type="button" class="btn btn-outline-primary" href = {% url 'vital_input' %}>健康状態を入力する</button>
+    <a button type="button" class="btn btn-outline-primary" href= {% url 'vital_input' %}>健康状態を入力する</a>
   </div>
   <div class="py-3">
-    <button type="button" class="btn btn-outline-primary" href = {% url 'vital_input' %}>今までの健康状態を見る</button>
+    <a button type="button" class="btn btn-outline-primary" href = {% url 'vital_log' %}>今までの健康状態を見る</a>
   </div>
   <div class="py-3">
-  <button type="button" class="btn btn-outline-danger" href={% url 'Logout' %}>ログアウト </button></div>
+  <a button type="button" class="btn btn-outline-danger" href={% url 'Logout' %}>ログアウト </a></div>
 
   </div>
 </div>
