--- a/corona_web_app/templates/accounts_HTML/login_index.html
+++ b/corona_web_app/templates/accounts_HTML/login_index.html
@@ -33,7 +33,7 @@
       </div>
       <button class="w-50 btn btn-lg btn-primary" type="submit">ログイン</button>
       <p class="message">アカウントをお持ちですか？：
-      <a href="{% url 'registration' %}">アカウントを作成</a>
+      <a href="{% url 'user_base_information' %}">アカウントを作成</a>
       
 
    </form>
