--- a/corona_web_app/templates/accounts_HTML/medical_corona_history.html
+++ b/corona_web_app/templates/accounts_HTML/medical_corona_history.html
@@ -8,20 +8,18 @@
   {% bootstrap_javascript %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>新規登録</title>
+  <title>新規登録（メディカルヒストリー）</title>
   </head>
 
   <body class="text-center">
     <main class="form-signin w-50 m-auto">
-      <h1 class="h3 mb-3 fw-normal">新規登録</h1>
+      <h1 class="h3 mb-3 fw-normal">以下の情報を入力してください</h1>
       <form enctype="multipart/form-data" method="post"">
         <div class="form-floating"></div>
-        <div class="py-3">
-        {{ registration_form.as_p }}</div>
-        <div class="py-3">
-        {{ user_information_form.as_p }}</div>
+        {{ user_medical_historly_form.as_p }}
+        {{ corona_history_form.as_p }}
         {% csrf_token %}
-        <input class="w-50 btn btn-lg btn-primary" type="submit" value="登録">
+        <input class="w-50 btn btn-lg btn-primary" type="submit" name="" value="登録">
 
       </form>
     </main>
