vital_log のdatatableよし

--- a/corona_web_app/templates/accounts_HTML/login_home.html
+++ b/corona_web_app/templates/accounts_HTML/login_home.html
@@ -22,7 +22,7 @@
     <a button type="button" class="btn btn-outline-primary" href= {% url 'vital_input' %}>健康状態を入力する</a>
   </div>
   <div class="py-3">
-    <a button type="button" class="btn btn-outline-primary" href = {% url 'vital_log' %}>今までの健康状態を見る</a>
+    <a button type="button" class="btn btn-outline-primary" href = {% url 'vital_log:vital_list' %}>今までの健康状態を見る</a>
   </div>
   <div class="py-3">
   <a button type="button" class="btn btn-outline-danger" href={% url 'Logout' %}>ログアウト </a></div>
