--- a/corona_web_app/templates/vital_input_HTML/vital_input.html
+++ b/corona_web_app/templates/vital_input_HTML/vital_input.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-{% load django_bootstrap5 %}
-<html lang="ja" dir="ltr">
+<html lang="ja" >
+  
   <head>
+    {% load django_bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
-    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
-    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+
+
+    <script src="https://kit.fontawesome.com/7cdaa6eac6.js" crossorigin="anonymous"></script>
+
     <meta charset="utf-8">
-    <title>Contact Form</title>
+    <title>健康状態入力</title>
   </head>
   <body>
-  <div class="container text-center">
-  <div class="row align-items-center">
-    <h1>{{ Message }}</h1>
-    <!-- フォームを定義 -->
+    <div class="container text-center">
+      <div class="row align-items-center">
+      <div class="d-grid gap-2 col-6 mx-auto">
+
     <form action="{% url 'vital_input' %}" method="POST">
     {{ form.as_p }}
     {% csrf_token %}
-    <input type="submit" value="送信">
+
+    <input class="btn btn-outline-primary" type="submit" value="送信">
     </form>
   </div>
   </div>
