--- a/corona_web_app/templates/user_json.html
+++ b/corona_web_app/templates/user_json.html
@@ -3,8 +3,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>バイタルログ</title>
-
+    <title>患者検索</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
@@ -19,31 +18,19 @@
             <table id="datatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr>
-                <th>日付</th>
-                <th>体温</th>
-                <th>酸素飽和度</th>
-                <th>収縮期血圧</th>
-                <th>拡張期血圧</th>
-                <th>脈拍</th>
-                <th>息苦しさ</th>
-                <th>胸の痛み</th>
-                <th>倦怠感</th>
-                <th>悪寒</th>
-                <th>咳</th>
-                <th>鼻水</th>
-                <th>嘔気</th>
-                <th>嘔吐</th>
-                <th>下痢</th>
-                <th>頭痛</th>
-                <th>腹痛</th>
-                <th>関節痛</th>
-                <th>嗅覚異常</th>                    
-                <th>味覚異常</th>
-                <th>けいれん</th>
-                <th>食欲</th>
-                <th>食事量</th>
-                <th>水分量</th>
-                <th>解熱剤の残数</th>
+              <th>ID</th>
+              <th>苗字</th>
+              <th>名前</th>
+              <th>苗字（かな）</th>
+              <th>名前（かな）</th>
+              <th>生年月日</th>
+              <th>性別</th>
+              <th>身長</th>
+              <th>体重</th>
+              <th>電話番号</th>
+              <th>住所（都道府県）</th>
+              <th>緊急連絡先（電話番号）</th>
+              <th>緊急連作先</th>
             </tr>
         </thead>
     </table>
@@ -70,7 +57,7 @@ $(document).ready(function() {
         "searching": true,
     "ordering": true,
   "info": true,
-        "ajax": "vital_list_ajax"
+        "ajax": "json"
     });
 });
 </script>
