--- a/corona_web_app/templates/accounts_HTML/login_home.html
+++ b/corona_web_app/templates/accounts_HTML/login_home.html
@@ -23,10 +23,10 @@
   <div class="d-grid gap-2 col-6 mx-auto">
   
     <div class="py-1">
-    <h1><font color="blue">{{ UserID }}</font> さん, ようこそ
+    <h1><font color="darkorange">{{ UserID }}</font> さん, ようこそ
     </div>
     <div class="py-3">
-    <i class="fa-solid fa-house-medical fa-7x "></i>
+    <i class="fa-solid fa-house-medical fa-7x " style='color: rgba(232, 102, 122, 0.675)' ></i>
     </div>
 
 
