--- a/corona_web_app/templates/accounts_HTML/login_index.html
+++ b/corona_web_app/templates/accounts_HTML/login_index.html
@@ -21,7 +21,7 @@
     <h1 class="h3 mb-3 fw-normal">健康観察アプリ</h1>
   </div>
   <div class="py-3">
-    <i class="fa-solid fa-comment-medical fa-7x "></i>
+    <i class="fa-solid fa-comment-medical fa-7x" style='color: rgb(232, 102, 122, 0.675)' ></i>
   </div>
 
   <div class="py-3">
