チェックボックス作成 html

--- a/corona_web_app/templates/health_care_HTML/health_care.html
+++ b/corona_web_app/templates/health_care_HTML/health_care.html
@@ -12,6 +12,8 @@
         <title>体調入力</title>
     </head>
     <body>
+        {% csrf_token %}
+        
         {% for field in form %}
         {% endfor %}
 
